--- a/Tyuiu.ZaicevYaA.Sprint2.Task4.V6/Tyuiu.ZaicevYaA.Sprint2.Task4.V6.csproj
+++ b/Tyuiu.ZaicevYaA.Sprint2.Task4.V6/Tyuiu.ZaicevYaA.Sprint2.Task4.V6.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZaicevYaA.Sprint2.Task4.V6.Lib\Tyuiu.ZaicevYaA.Sprint2.Task4.V6.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
