--- a/Tyuiu.ZaicevYaA.Sprint2.Task5.V15/Tyuiu.ZaicevYaA.Sprint2.Task5.V15.csproj
+++ b/Tyuiu.ZaicevYaA.Sprint2.Task5.V15/Tyuiu.ZaicevYaA.Sprint2.Task5.V15.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZaicevYaA.Sprint2.Task5.V15.Lib\Tyuiu.ZaicevYaA.Sprint2.Task5.V15.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
