--- a/Tyuiu.ZaicevYaA.Sprint2.Task6.V7/Tyuiu.ZaicevYaA.Sprint2.Task6.V7.csproj
+++ b/Tyuiu.ZaicevYaA.Sprint2.Task6.V7/Tyuiu.ZaicevYaA.Sprint2.Task6.V7.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZaicevYaA.Sprint2.Task6.V7.Lib\Tyuiu.ZaicevYaA.Sprint2.Task6.V7.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
