--- a/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Test/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Test.csproj
+++ b/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Test/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Lib\Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
