--- a/Tyuiu.ZaicevYaA.Sprint2.Task7.V3/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.csproj
+++ b/Tyuiu.ZaicevYaA.Sprint2.Task7.V3/Tyuiu.ZaicevYaA.Sprint2.Task7.V3.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Lib\Tyuiu.ZaicevYaA.Sprint2.Task7.V3.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
